Add retail purchase functions

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -75,6 +75,10 @@
     "Can Be Shipped": "출고가능",
     "Cancel": "취소",
     "Cancel Id": "취소 ID",
+    "Canceled": "취소",
+    "Card": "카드",
+    "Cash": "현금",
+    "Cashier": "수납원",
     "Category": "카테고리",
     "CellPhone": "휴대폰",
     "Center Class": "센터 등급",
@@ -102,6 +106,7 @@
     "Collapse All": "모든 축소",
     "Comment": "논평",
     "Company": "회사",
+    "Completed": "완료",
     "Completed At": "검수일시",
     "Confirm": "확인",
     "Confirm Amount": "확인수량",
@@ -130,6 +135,7 @@
     "Created": "만들어진",
     "Created At": "생성일",
     "Current Password": "현재 비밀번호",
+    "Customer": "거래처",
     "Customer Price": "소비자가",
     "Customers": "고객",
     "Daily Registered User Count": "신규회원수",
@@ -150,6 +156,7 @@
     "Details": "상세",
     "Disable": "비활성화",
     "Discard": "버리다",
+    "Discount": "할인",
     "Donation Title": "기부 제목",
     "Done": "완료",
     "Down": "아래에",
@@ -361,6 +368,7 @@
     "Mismatched Order Good Count": "미매칭 주문상품수",
     "Mismatched Order Shipment": "미매칭 주문 출고",
     "Mismatched Order Shipments": "미매칭 주문 출고",
+    "Mobile": "모바일",
     "ModDt": "수정일",
     "Model": "모델",
     "Modified": "수정일",
@@ -400,9 +408,10 @@
     "Not Found": "찾을 수 없습니다",
     "Not Implemented": "구현되지 않음",
     "Not Modified": "수정되지 않음",
+    "Notes": "비고",
     "of": "의",
     "Off Sale": "판매중지",
-    "Offline Order & Shipping": "오프라인 주문출고",
+    "Offline Purchase": "오프라인 판매",
     "OK": "좋아요",
     "On Sale": "판매중",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "계정을 삭제하면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 삭제하기 전에 유지하려는 필요한 데이터 또는 정보를 다운로드하세요.",
@@ -470,6 +479,7 @@
     "Orders": "주문",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
+    "Other": "기타",
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
@@ -482,7 +492,9 @@
     "Pay Goods Cd": "지불상품코드",
     "Payload Too Large": "페이로드가 너무 큼",
     "Payment Date": "결제일",
+    "Payment Method": "결제방법",
     "Payment Required": "결제 필요",
+    "Pending": "대기",
     "Permanent Redirect": "영구 리디렉션",
     "Phone": "전화",
     "Picking Zone": "피킹존",
@@ -533,6 +545,7 @@
     "Purchase Order Items": "발주 아이템",
     "Purchase Ordering": "구매 발주",
     "Purchase Orders": "발주서",
+    "Purchased At": "판매일",
     "PurchaseOrder Order Date": "발주일",
     "PurchaseOrder Status": "발주상태",
     "PurchaseOrder Total Good Count": "발주총상품수",
@@ -542,11 +555,13 @@
     "Railgun Error": "레일건 오류",
     "Range Not Satisfiable": "범위가 만족스럽지 않음",
     "Reason": "사유",
+    "Receipt Number": "영수증 번호",
     "Receiver Cell Phone": "수령인 휴대폰",
     "Receiver Name": "수령인 이름",
     "Receiver Phone": "수령인 전화",
     "Receiving": "입고",
     "Record": "기록",
+    "Refunded": "환불",
     "Regards,": "안부,",
     "RegDt": "등록일시",
     "Regist Date": "등록일",
@@ -569,6 +584,10 @@
     "Restore :name": ":name을 복원",
     "results": "결과",
     "Retail Code": "리테일 코드",
+    "Retail Purchase": "판매",
+    "Retail Purchase Item": "판매아이템",
+    "Retail Purchase Items": "판매아이템",
+    "Retail Purchases": "판매",
     "Retry With": "재시도",
     "Role": "역할",
     "Row Count": "행수",
@@ -653,6 +672,7 @@
     "Storage Box Zone": "스토리지 박스존",
     "Submit": "제출하다",
     "Subscribe": "구독",
+    "Subtotal": "소계",
     "Suggested Monitoring Price": "공모가",
     "Suggested Retail Price": "소비자가",
     "Suggested Sales Percent Margin": "제안판매마진(퍼센트)",
@@ -692,6 +712,7 @@
     "Switching Protocols": "스위칭 프로토콜",
     "Tag": "꼬리표",
     "Tags": "태그",
+    "Tax": "세금",
     "Temporary Redirect": "임시 리디렉션",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "가입해 주셔서 감사합니다! 시작하시기 전에 방금 이메일로 보낸 링크를 클릭하여 이메일 주소를 확인해 주시겠습니까? 이메일을 받지 못한 경우 새 이메일을 보내 드리겠습니다.",
     "The ct_order has been saved.": "발주서가 저장되었습니다.",
@@ -721,7 +742,7 @@
     "Total No Sale Good Count": "판매중지상품수",
     "Total Order Price": "총 발주 금액",
     "Total Order Shipment": "총 주문서",
-    "Total Price": "전체가격",
+    "Total Price": "총 결제 금액",
     "Total Purchase Order Good": "총 발주상품",
     "Total Sale Count": "총 판매갯수",
     "Total Sale Good Count": "판매상품수",
