Remove `price` column in `InventoryHistory`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -84,6 +84,7 @@
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
     "Change Password": "비밀번호 변경",
+    "Change Status": "상태 바꾸기",
     "Change Status Action - :status": "[:status] 로 상태변경",
     "Channel": "채널",
     "Channel Fee": "채널 수수료",
@@ -571,6 +572,7 @@
     "Register Option Good Request": "옵션상품 등록/수정 요청",
     "Remember Me": "로그인 상태 유지",
     "Remember me": "로그인 상태 유지",
+    "Replicate": "복사하기",
     "Request File Url": "요청파일",
     "Request Header Fields Too Large": "요청 헤더 필드가 너무 큼",
     "Request Timeout": "요청 시간 초과",
@@ -721,6 +723,7 @@
     "The option must match this field, so please enter the exact name.": "옵션은 이 필드와 일치해야 하므로 정확한 이름을 입력하세요.",
     "The response is not a streamed response.": "응답이 스트리밍 응답이 아닙니다.",
     "The response is not a view.": "응답은 보기가 아닙니다.",
+    "The status cannot be changed.": "상태를 변경할 수 없습니다.",
     "This action is unauthorized.": "이 작업은 승인되지 않았습니다.",
     "This is a secure area of the application. Please confirm your password before continuing.": "이곳은 보안 구역입니다. 진행하기 위해서 비밀번호를 입력해주세요.",
     "This password reset link will expire in :count minutes.": "이 비밀번호 재설정 링크는 :count분 후에 만료됩니다.",
@@ -757,6 +760,7 @@
     "Tracking": "이력",
     "Translate": "번역하다",
     "Translate It": "번역하세요",
+    "Treat as :status": ":status로 처리",
     "Type": "타입",
     "Unauthorized": "인증되지 않음",
     "Unavailable For Legal Reasons": "법적인 이유로 사용할 수 없음",
