Make some digits be collect

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -306,6 +306,7 @@
     "Is Warehoused": "입고가능유무",
     "Issuer": "요청자",
     "Item": "아이템",
+    "Item Count": "아이템 갯수",
     "Item Division Color": "아이템 구분색",
     "Item Inventory Histories": "아이템 재고 이력",
     "Item Inventory History": "아이템 재고 이력",
