--- a/lang/ko.json
+++ b/lang/ko.json
@@ -22,7 +22,7 @@
     "After Quantity": "변경 후 수량",
     "Agree": "동의하다",
     "Alert Email": "알람 이메일",
-    "Alert Emails": "알림 이메일",
+    "Alert Emails": "알람 이메일",
     "All rights reserved.": "모든 권리 보유.",
     "Already registered?": "계정이 있으신가요?",
     "Already Reported": "이미 보고됨",
@@ -57,7 +57,7 @@
     "Box Inventory History": "박스 재고(입출고) 이력",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
-    "Box Orders": "박스 발주서",
+    "Box Orders": "박스 발주",
     "Box Price": "박스 가격",
     "Box Purchase Order And Warehousing": "박스 발주 및 입고",
     "Box Quantity": "박수 수량",
@@ -158,6 +158,7 @@
     "Disable": "비활성화",
     "Discard": "버리다",
     "Discount": "할인",
+    "Discount Amount": "할인금액",
     "Donation Title": "기부 제목",
     "Done": "완료",
     "Down": "아래에",
@@ -250,6 +251,7 @@
     "HTTP Version Not Supported": "지원되지 않는 HTTP 버전",
     "I'm a teapot": "나는 찻주전자",
     "Id": "아이디",
+    "If it sets the minus value, the status is going to set RETURNED automatically.": "값이 마이너스로 설정되면 자동으로 반품상태로 설정됩니다.",
     "If you are in Korea, select \"Asia/Seoul\".": "한국에 거주하시는 경우 \"Asia/Seoul\"을 선택하세요.",
     "If you did not create an account, no further action is required.": "계정을 생성하지 않았다면 추가 조치가 필요하지 않습니다.",
     "If you did not receive the email": "이메일을 받지 못하셨다면",
@@ -316,6 +318,7 @@
     "Item Manual Warehousing Memo": "아이템 재고조정 메모",
     "Item Manual Warehousing Type": "아이템 재고조정 타입",
     "Item Manual Warehousings": "아이템 수동 재고조정",
+    "Item Price": "아이템 가격",
     "Items": "아이템",
     "Items & Boxes": "아이템 & 박스",
     "Last Cost Price": "최근 매입가",
@@ -381,8 +384,8 @@
     "My Shop Sale Option Count": "자사몰 판매가능 옵션수",
     "Name": "이름",
     "name": "이름",
-    "Naver Categories": "네이버 카테고리",
-    "Naver Category": "네이버카테고리ID",
+    "Naver Categories": "네이버카테고리",
+    "Naver Category": "네이버카테고리",
     "Naver Category Name": "네이버카테고리 이름",
     "Naver Flag": "네이버쇼핑 노출여부",
     "Naver Lowest Price": "네이버 최저가",
@@ -536,7 +539,7 @@
     "Promotion Code": "프로모션 코드",
     "Promotion Codes": "프로모션 코드",
     "Proxy Authentication Required": "프록시 인증 필요",
-    "Purchase Order": "발주",
+    "Purchase Order": "발주서",
     "Purchase Order And Warehousing": "상품 발주 및 입고",
     "Purchase Order Boxes": "발주 박스",
     "Purchase Order Count": "발주횟수",
@@ -545,8 +548,11 @@
     "Purchase Order Item Id": "발주 아이템 아이디",
     "Purchase Order Item Per Day": "일별 발주 아이템",
     "Purchase Order Items": "발주 아이템",
+    "Purchase Ordered At": "발주일",
     "Purchase Ordering": "구매 발주",
     "Purchase Orders": "발주서",
+    "Purchase Price": "구매가격",
+    "Purchase Quantity": "구매량",
     "Purchased At": "판매일",
     "PurchaseOrder Order Date": "발주일",
     "PurchaseOrder Status": "발주상태",
@@ -573,7 +579,6 @@
     "Register Option Good Request": "옵션상품 등록/수정 요청",
     "Remember Me": "로그인 상태 유지",
     "Remember me": "로그인 상태 유지",
-    "Replicate": "복사하기",
     "Request File Url": "요청파일",
     "Request Header Fields Too Large": "요청 헤더 필드가 너무 큼",
     "Request Timeout": "요청 시간 초과",
@@ -696,11 +701,8 @@
     "Supplier Id": "공급사아이디",
     "Supplier Modified": "공급사수정일",
     "Supplier Monitoring Interruption": "공모가위반시공급중단",
-    "Supplier monitoring Interruption": "공급사모니터링중지",
     "Supplier Monitoring Price": "공급사 모니터링 가격",
-    "Supplier monitoring Price": "공급사모니터링가격",
     "Supplier Monitoring Status": "공급사 모니터링 상태",
-    "Supplier monitoring Status": "공급사모니터링상태",
     "Supplier Name": "공급사 이름",
     "Supplier Out Of Stock Count": "공급사 품절 횟수",
     "Supplier Out Of Stock Off Datetime": "공급사 품절 해제일",
@@ -766,6 +768,7 @@
     "Unauthorized": "인증되지 않음",
     "Unavailable For Legal Reasons": "법적인 이유로 사용할 수 없음",
     "Unit Price": "단가",
+    "Unit Purchase Price": "개당 구매가격",
     "Units Per Case": "입수량",
     "Unknown Error": "알수없는 오류",
     "Unpack": "짐 등에서 꺼내다",
