Add `CANCELED` case into `PurchaseOrderItemStatus`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -597,6 +597,7 @@
     "Retail Purchase Items": "판매아이템",
     "Retail Purchases": "판매",
     "Retry With": "재시도",
+    "Returning": "반품하기",
     "Role": "역할",
     "Row Count": "행수",
     "Safe Class": "재고등급",
