Refactor `BoxPurchaseOrder` and `BoxPurchaseOrderItem`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -59,7 +59,11 @@
     "Box Order": "박스 발주",
     "Box Orders": "박스 발주",
     "Box Price": "박스 가격",
+    "Box Purchase Order": "박스 발주",
     "Box Purchase Order And Warehousing": "박스 발주 및 입고",
+    "Box Purchase Order Item": "박스 발주 아이템",
+    "Box Purchase Order Items": "박스 발주 아이템",
+    "Box Purchase Orders": "박스 발주",
     "Box Quantity": "박수 수량",
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
@@ -740,7 +744,7 @@
     "Too Many Requests": "너무 많은 요청",
     "Tools": "도구",
     "Total Amount": "전체수량",
-    "Total Box Count": "총 박스 수량",
+    "Total Box Count": "총 박스 갯수",
     "Total Delivery Price": "전체배송금액",
     "Total Good": "총 상품",
     "Total Good Count": "총 상품 갯수",
