Upgrade `InventoryHistory` and `BoxInventoryHistory` through `morphOne`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -54,7 +54,7 @@
     "Box": "박스",
     "Box Barcode": "박스 바코드",
     "Box Count": "박스 수량",
-    "Box Inventory History": "박스 재고(입출고) 이력",
+    "Box Inventory History": "박스 재고 이력",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
     "Box Orders": "박스 발주",
@@ -281,6 +281,7 @@
     "Inventory Adjustment": "재고 조정",
     "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
+    "Inventory Historyable": "아이템 재고변경 원인",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
     "Inventory Level 3": "재고 3등급",
@@ -744,10 +745,10 @@
     "Too Many Requests": "너무 많은 요청",
     "Tools": "도구",
     "Total Amount": "전체수량",
-    "Total Box Count": "총 박스 갯수",
+    "Total Box Count": "총 박스 수",
     "Total Delivery Price": "전체배송금액",
     "Total Good": "총 상품",
-    "Total Good Count": "총 상품 갯수",
+    "Total Good Count": "총 상품 수",
     "Total Inventory": "재고",
     "Total Inventory Amount": "재고 금액",
     "Total No Sale Good Count": "판매중지상품수",
