Update a localization file

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -54,6 +54,7 @@
     "Box": "박스",
     "Box Barcode": "박스 바코드",
     "Box Count": "박스 수량",
+    "Box Inventory Histories": "박스 재고 이력",
     "Box Inventory History": "박스 재고 이력",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
