Add `Location` and `Warehouse` tables

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -351,6 +351,7 @@
     "Load": "짐",
     "Localize": "현지화",
     "Location": "위치",
+    "Locations": "위치",
     "Locked": "잠김",
     "Log In": "로그인",
     "Log in": "로그인",
@@ -566,6 +567,8 @@
     "PurchaseOrder Total Order Price": "발주총금액",
     "Quantity": "수량",
     "Quantity In Box": "입수량",
+    "Rack": "랙",
+    "Racks": "랙",
     "Railgun Error": "레일건 오류",
     "Range Not Satisfiable": "범위가 만족스럽지 않음",
     "Reason": "사유",
@@ -804,9 +807,11 @@
     "View": "뷰",
     "View :name": "보기 :name",
     "Visit": "방문하기",
+    "Warehouse": "물류창고",
     "Warehouse Manager": "입고담당자",
     "Warehoused": "입고일시",
     "Warehoused At": "입고일시",
+    "Warehouses": "물류창고",
     "Waybill": "운송장",
     "Waybill Company": "운송장 회사",
     "Waybill File": "운송장 파일",
