API auth transfer using `session` instead of `token`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -535,7 +535,9 @@
     "Price Coefficients": "가격 계수",
     "Print Barcode Commands": "바코드 커맨드 출력",
     "Print Classification": "출력분류",
+    "Print Order": "주문 출력",
     "Print Order Sheet Waybill": "주문서 출력",
+    "Print Orders": "주문 출력",
     "Printed": "프린트여부",
     "Printed At": "프린트일시",
     "Printed Count": "출력된 수",
