--- a/lang/ko.json
+++ b/lang/ko.json
@@ -56,6 +56,7 @@
     "Box Count": "박스 수량",
     "Box Inventory Histories": "박스 재고 이력",
     "Box Inventory History": "박스 재고 이력",
+    "Box Level :count": "박스 :count호",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
     "Box Orders": "박스 발주",
