Update `ItemStatus` on `items` table

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -12,6 +12,7 @@
     "Action": "액션",
     "Action Name": "액션 이름",
     "Actions": "액션들",
+    "Active": "활성화",
     "Add": "추가",
     "Add :name": ":name을 더하다",
     "Additional Information": "추가 정보",
@@ -163,6 +164,8 @@
     "Details": "상세",
     "Disable": "비활성화",
     "Discard": "버리다",
+    "Discontinued": "단종됨",
+    "Discontinued At": "상품단종날짜",
     "Discount": "할인",
     "Discount Amount": "할인금액",
     "Donation Title": "기부 제목",
@@ -496,6 +499,7 @@
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
+    "Out Of Stock": "재고 없음",
     "Page Expired": "만료된 페이지",
     "Pagination Navigation": "페이지네이션 내비게이션",
     "Partial Content": "부분 콘텐츠",
