--- a/lang/ko.json
+++ b/lang/ko.json
@@ -331,6 +331,7 @@
     "Item Price": "아이템 가격",
     "Items": "아이템",
     "Items & Boxes": "아이템 & 박스",
+    "Items Per Status": "상태별 아이템",
     "Last Cost Price": "최근 매입가",
     "Last Order Count": "실매입개수",
     "Last Order Price": "실매입가격",
