--- a/lang/ko.json
+++ b/lang/ko.json
@@ -287,6 +287,7 @@
     "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
     "Inventory Historyable": "아이템 재고변경 원인",
+    "Inventory Level": "재고등급",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
     "Inventory Level 3": "재고 3등급",
@@ -617,12 +618,6 @@
     "Returning": "반품하기",
     "Role": "역할",
     "Row Count": "행수",
-    "Safe Class": "재고등급",
-    "Safe Class 1": "재고 1등급",
-    "Safe Class 2": "재고 2등급",
-    "Safe Class 3": "재고 3등급",
-    "Safe Class D": "재고 D등급",
-    "Safe Class X": "재고 X등급",
     "Safe Inventory": "안전 재고",
     "Sale Count Per Day": "일별 판매갯수",
     "Sale Price Per Day": "일별 판매금액",
