Improve `Item` resource and related functions (#71)
* Remove `item_division_color` field of `items` table

* Remove useless resource

* Run `composer update` for `cable8mm/good-code`

* Improve `inventory_histories` and `box_inventory_histories`

* Update assets

* Calculate `zero_margin_price`

* Update `ItemStatus` on `items` table

* Apply `ItemStatus` to `items` table correctly

* Rename `safe_class` to `inventory_level`

* Set defaults for `Item` resource fields

* Switch pest to phpunit for good experiences

* Set `ItemStatus` enum and `suggested_selling_price`

* Resolve too short field length problem

* Fix `ItemStatus` test code

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -12,6 +12,7 @@
     "Action": "액션",
     "Action Name": "액션 이름",
     "Actions": "액션들",
+    "Active": "활성화",
     "Add": "추가",
     "Add :name": ":name을 더하다",
     "Additional Information": "추가 정보",
@@ -56,6 +57,7 @@
     "Box Count": "박스 수량",
     "Box Inventory Histories": "박스 재고 이력",
     "Box Inventory History": "박스 재고 이력",
+    "Box Level :count": "박스 :count호",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
     "Box Orders": "박스 발주",
@@ -162,6 +164,8 @@
     "Details": "상세",
     "Disable": "비활성화",
     "Discard": "버리다",
+    "Discontinued": "단종됨",
+    "Discontinued At": "상품단종날짜",
     "Discount": "할인",
     "Discount Amount": "할인금액",
     "Donation Title": "기부 제목",
@@ -283,6 +287,7 @@
     "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
     "Inventory Historyable": "아이템 재고변경 원인",
+    "Inventory Level": "재고등급",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
     "Inventory Level 3": "재고 3등급",
@@ -327,6 +332,7 @@
     "Item Price": "아이템 가격",
     "Items": "아이템",
     "Items & Boxes": "아이템 & 박스",
+    "Items Per Status": "상태별 아이템",
     "Last Cost Price": "최근 매입가",
     "Last Order Count": "실매입개수",
     "Last Order Price": "실매입가격",
@@ -495,6 +501,7 @@
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
+    "Out Of Stock": "재고 없음",
     "Page Expired": "만료된 페이지",
     "Pagination Navigation": "페이지네이션 내비게이션",
     "Partial Content": "부분 콘텐츠",
@@ -611,12 +618,6 @@
     "Returning": "반품하기",
     "Role": "역할",
     "Row Count": "행수",
-    "Safe Class": "재고등급",
-    "Safe Class 1": "재고 1등급",
-    "Safe Class 2": "재고 2등급",
-    "Safe Class 3": "재고 3등급",
-    "Safe Class D": "재고 D등급",
-    "Safe Class X": "재고 X등급",
     "Safe Inventory": "안전 재고",
     "Sale Count Per Day": "일별 판매갯수",
     "Sale Price Per Day": "일별 판매금액",
