--- a/lang/ko.json
+++ b/lang/ko.json
@@ -840,6 +840,8 @@
     "Ymd": "년월일",
     "You are logged in!": "로그인되었습니다!",
     "You are receiving this email because we received a password reset request for your account.": "귀하의 계정에 대한 비밀번호 재설정이 요청되어 이 메일이 발송되었습니다.",
+    "You can search for boxes by sku, box name or box supplier name.": "SKU, 박스 이름, 박스공급사 이름으로 검색할 수 있습니다.",
+    "You can search for items by sku, item name or supplier name.": "SKU, 아이템 이름, 공급사 이름으로 검색할 수 있습니다.",
     "You're logged in!": "로그인되었습니다!",
     "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다.",
     "Your request for regist of Option Good is completed.": "귀하의 옵션상품 등록 요청이 완료되었습니다.",
