--- a/lang/ko.json
+++ b/lang/ko.json
@@ -71,6 +71,7 @@
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
     "Box Supplier": "박스 공급사",
+    "Box Supplier Name": "박스공급사 이름",
     "Boxes": "박스",
     "Brand": "브랜드",
     "Brand Name": "브랜드이름",
