--- a/lang/ko.json
+++ b/lang/ko.json
@@ -71,6 +71,7 @@
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
     "Box Supplier": "박스 공급사",
+    "Box Supplier Name": "박스공급사 이름",
     "Boxes": "박스",
     "Brand": "브랜드",
     "Brand Name": "브랜드이름",
@@ -83,6 +84,8 @@
     "Cancel": "취소",
     "Cancel Id": "취소 ID",
     "Canceled": "취소",
+    "Cancelling Inventory History": "재고내역 취소하기",
+    "Cannot cancel because it already canceled": "이미 취소되었기 때문에 취소할 수 없습니다.",
     "Card": "카드",
     "Cash": "현금",
     "Cashier": "수납원",
