Decorate `RetailPurchase` resource

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -418,6 +418,7 @@
     "New": "New",
     "New :name": "새로운 :name",
     "New Password": "새 비밀번호",
+    "New Retail Purchase": "신규 판매",
     "Newsletter Received User Count": "뉴스레터 수신자수",
     "Next": "다음",
     "No": "아니요",
@@ -616,6 +617,8 @@
     "Retail Purchase": "판매",
     "Retail Purchase Item": "판매아이템",
     "Retail Purchase Items": "판매아이템",
+    "Retail Purchase Per Day": "일별매출",
+    "Retail Purchase Sum Payment Method": "결제방법별 매출합계",
     "Retail Purchases": "판매",
     "Retry With": "재시도",
     "Returning": "반품하기",
