Remodel some prices fields with suppliers

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -148,7 +148,7 @@
     "Current Password": "현재 비밀번호",
     "Customer": "거래처",
     "Customer Price": "소비자가",
-    "Customers": "고객",
+    "Customers": "거래처",
     "Daily Registered User Count": "신규회원수",
     "Dashboard": "대시보드",
     "Dashboards": "대시보드",
@@ -377,6 +377,7 @@
     "Margin 3 Percent Price": "3%마진가",
     "Margin 5 Percent Price": "5%마진가",
     "Margin Zero Percent Price": "0%마진가",
+    "Max Price": "최대 판매가",
     "MemId": "회원 아이디",
     "MemNm": "회원 이름",
     "MemNo": "회원 번호",
@@ -385,6 +386,7 @@
     "Method Not Allowed": "비 허가 된 방식",
     "Min Order Count": "최소 주문 수량",
     "Min Order Price": "최소 발주 금액",
+    "Min Price": "최소 판매가",
     "Misdirected Request": "잘못된 요청",
     "Mismatched Order Good Count": "미매칭 주문상품수",
     "Mismatched Order Shipment": "미매칭 주문 출고",
@@ -720,12 +722,16 @@
     "Supplier Id": "공급사아이디",
     "Supplier Modified": "공급사수정일",
     "Supplier Monitoring Interruption": "공모가위반시공급중단",
+    "Supplier monitoring Interruption": "공모가 위반시 공급중단",
     "Supplier Monitoring Price": "공급사 모니터링 가격",
+    "Supplier monitoring Price": "공급사 모니터링 가격",
     "Supplier Monitoring Status": "공급사 모니터링 상태",
+    "Supplier monitoring Status": "공급사 모니터링 상태",
     "Supplier Name": "공급사 이름",
     "Supplier Out Of Stock Count": "공급사 품절 횟수",
     "Supplier Out Of Stock Off Datetime": "공급사 품절 해제일",
     "Supplier Out Of Stock On Datetime": "공급사 품절 등록일",
+    "Supplier Pricing Policy": "공급사가격정책",
     "Supplier Request Price": "공급사 요청 판매가격",
     "SupplierGood Good Code": "공급사상품코드",
     "SupplierGood Inventory": "공급사 재고 수량",
@@ -738,6 +744,7 @@
     "Tags": "태그",
     "Tax": "세금",
     "Temporary Redirect": "임시 리디렉션",
+    "Terminate On Pricing Violation": "가격 위반 시 공급 종료 여부",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "가입해 주셔서 감사합니다! 시작하시기 전에 방금 이메일로 보낸 링크를 클릭하여 이메일 주소를 확인해 주시겠습니까? 이메일을 받지 못한 경우 새 이메일을 보내 드리겠습니다.",
     "The ct_order has been saved.": "발주서가 저장되었습니다.",
     "The given barcode was invalid.": "제공된 바코드가 유효하지 않습니다.",
