--- a/lang/ko.json
+++ b/lang/ko.json
@@ -733,6 +733,7 @@
     "The ct_order has been saved.": "발주서가 저장되었습니다.",
     "The given barcode was invalid.": "제공된 바코드가 유효하지 않습니다.",
     "The given data was invalid.": "제공된 데이터가 유효하지 않습니다.",
+    "The given value was invalid.": "주어진 값이 옮바르지 않습니다.",
     "The option must match this field, so please enter the exact name.": "옵션은 이 필드와 일치해야 하므로 정확한 이름을 입력하세요.",
     "The response is not a streamed response.": "응답이 스트리밍 응답이 아닙니다.",
     "The response is not a view.": "응답은 보기가 아닙니다.",
