Apply multi-languages

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -213,7 +213,7 @@
     "File Sizes": "파일 크기",
     "Filepath": "파일경로",
     "Files": "파일",
-    "Finished": "마감일",
+    "Finished": "완료",
     "Finished At": "마감일시",
     "FirstOrderRegDt": "첫주문 일시",
     "Fixed Price": "원가",
@@ -349,6 +349,7 @@
     "List Image": "리스트 이미지",
     "Live Preset Download": "실시간 프리셋 다운로드",
     "Load": "짐",
+    "Locale": "언어",
     "Localize": "현지화",
     "Location": "위치",
     "Locations": "위치",
