Run `composer update` and `artisan lang:update`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -806,7 +806,7 @@
     "Variant Also Negotiates": "변형도 협상",
     "Verify Email Address": "이메일 주소 확인",
     "Verify Your Email Address": "이메일 주소 확인",
-    "View": "뷰",
+    "View": "보기",
     "View :name": "보기 :name",
     "Visit": "방문하기",
     "Warehouse": "물류창고",
