--- a/lang/ko.json
+++ b/lang/ko.json
@@ -731,11 +731,23 @@
     "Temporary Redirect": "임시 리디렉션",
     "Terminate On Pricing Violation": "가격 위반 시 공급 종료 여부",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "가입해 주셔서 감사합니다! 시작하시기 전에 방금 이메일로 보낸 링크를 클릭하여 이메일 주소를 확인해 주시겠습니까? 이메일을 받지 못한 경우 새 이메일을 보내 드리겠습니다.",
+    "The :attribute must be at least :length characters and contain at least one number.": ":Attribute은(는) 반드시 적어도 :length글자 이상이면서 하나 이상의 숫자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 특수 문자 그리고 숫자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one special character.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 특수 문자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 대문자, 숫자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 대문자, 특수문자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 대문자, 숫자, 그리고 특수문자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":Attribute은(는) 반드시 :length글자 이상이면서 하나 이상의 대문자를 포함해야 합니다.",
+    "The :attribute must be at least :length characters.": ":Attribute은(는) 반드시 :length글자 이상이어야 합니다.",
     "The ct_order has been saved.": "발주서가 저장되었습니다.",
     "The given barcode was invalid.": "제공된 바코드가 유효하지 않습니다.",
     "The given data was invalid.": "제공된 데이터가 유효하지 않습니다.",
     "The given value was invalid.": "주어진 값이 옮바르지 않습니다.",
     "The option must match this field, so please enter the exact name.": "옵션은 이 필드와 일치해야 하므로 정확한 이름을 입력하세요.",
+    "The provided password does not match your current password.": "입력하신 비밀번호가 현재 비밀번호와 일치하지 않습니다.",
+    "The provided password was incorrect.": "입력하신 비밀번호가 올바르지 않습니다.",
+    "The provided two factor authentication code was invalid.": "입력하신 2단계 인증 코드가 올바르지 않습니다.",
+    "The provided two factor recovery code was invalid.": "제공된 2단계 복구 코드가 잘못되었습니다.",
     "The response is not a streamed response.": "응답이 스트리밍 응답이 아닙니다.",
     "The response is not a view.": "응답은 보기가 아닙니다.",
     "The status cannot be changed.": "상태를 변경할 수 없습니다.",
