Run `composer update`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -300,8 +300,8 @@
     "Is Confirmed": "확인 여부",
     "Is Gift": "사은품인지?",
     "Is Hi300": "HI300 여부",
-    "Is My Shop Sale": "내매장판매여부",
-    "Is Other Shop Sale": "타매장판매여부",
+    "Is My Shop Sale": "자사몰 판매여부",
+    "Is Other Shop Sale": "타사몰 판매여부",
     "Is Parceled": "택배 유무",
     "Is Promotion": "프로모션 여부",
     "Is Requested Reborn": "     취소 요청",
@@ -444,6 +444,8 @@
     "Option Good": "옵션상품",
     "Option Good Option": "옵션상품 옵션",
     "Option Good Optionable": "옵션상품 옵션 종류",
+    "Option Good Optionable Id": "옵션상품 옵션 아이디",
+    "Option Good Optionable Type": "옵션상품 옵션 타입",
     "Option Good Options": "옵션상품 옵션",
     "Option Goods": "옵션상품",
     "Option Image": "옵션이미지",
@@ -638,6 +640,7 @@
     "Service Unavailable": "서비스를 사용할 수 없습니다.",
     "Services": "서비스",
     "Session Has Expired": "세션이 만료됨",
+    "Set Good": "세트상품",
     "Set Goods": "세트상품",
     "Setting": "설정",
     "Settings": "설정",
