Update Korean to English

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -79,6 +79,7 @@
     "Browse": "검색",
     "Bundled Goods": "묶음 상품",
     "Business Management": "거래처 관리",
+    "Buyer": "구매자",
     "CachedEsGood GoodsPrice": "올라펫샵판매가",
     "Can Be Shipped": "출고가능",
     "Cancel": "취소",
@@ -124,6 +125,7 @@
     "Connect": "연결하다",
     "Connection Closed Without Response": "응답 없이 연결 종료",
     "Connection Timed Out": "연결 시간이 초과되었습니다",
+    "Contact": "연락처",
     "Contact Cel": "담당자 휴대폰",
     "Contact Name": "담당자 이름",
     "Contact Tel": "담당자 전화",
@@ -238,6 +240,7 @@
     "Good Sum Cost Price": "상품 총매입가",
     "Goods": "일반상품",
     "Goods Code": "상품코드",
+    "Goods Name": "상품명",
     "Goods Nm": "상품명",
     "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
@@ -381,6 +384,7 @@
     "Min Price": "최소 판매가",
     "Misdirected Request": "잘못된 요청",
     "Mismatched Order Good Count": "미매칭 주문상품수",
+    "Mismatched Order Goods": "미매칭 주문상품",
     "Mismatched Order Shipment": "미매칭 주문 출고",
     "Mismatched Order Shipments": "미매칭 주문 출고",
     "Mobile": "모바일",
@@ -458,6 +462,7 @@
     "Order": "주문",
     "Order #:order_id must have a order shipment.": "#:order_id 주문은 적어도 하나의 주문서/출고가 있어야 합니다.",
     "Order Cell Phone": "주문 휴대폰",
+    "Order Channel": "구매채널",
     "Order Count": "주문수",
     "Order Date": "주문 일",
     "Order Discount Percent": "발주 할인(%)",
@@ -468,6 +473,7 @@
     "Order Method": "발주 방법",
     "Order Name": "주문 이름",
     "Order No": "주문번호",
+    "Order Notes": "요청사항",
     "Order Number": "주문번호",
     "Order Number Count": "주문 번호수",
     "Order Phone": "주문 전화",
@@ -490,6 +496,7 @@
     "Ordered": "발주시각",
     "Ordered At": "주문일시",
     "Ordered Email": "발주 이메일",
+    "Orderer Information": "주문자정보",
     "OrderName": "주문자명",
     "OrderNo": "주문번호",
     "OrderPhone": "주문자전화",
@@ -538,8 +545,8 @@
     "Print Order": "주문 출력",
     "Print Order Sheet Waybill": "주문서 출력",
     "Print Orders": "주문 출력",
-    "Printed": "프린트여부",
-    "Printed At": "프린트일시",
+    "Printed": "출력여부",
+    "Printed At": "출력일시",
     "Printed Count": "출력된 수",
     "Processing": "처리",
     "Profile": "프로필",
@@ -576,9 +583,12 @@
     "Reason": "사유",
     "Receipt Number": "영수증 번호",
     "Receiver Cell Phone": "수령인 휴대폰",
+    "Receiver Contact": "수령인 연락처",
     "Receiver Name": "수령인 이름",
     "Receiver Phone": "수령인 전화",
     "Receiving": "입고",
+    "Recipient": "수령자",
+    "Recipient Information": "수령자정보",
     "Record": "기록",
     "Refunded": "환불",
     "Regards,": "안부,",
@@ -840,6 +850,7 @@
     "Waybill Filepath": "운송장 파일경로",
     "Waybill Goods Cd": "운송장상품코드",
     "Waybill No": "운송장번호",
+    "Waybill Number": "운송장번호",
     "Waybill Numbers": "운송장번호(들)",
     "Wearing Price": "입고 금액",
     "Wearing Quantity": "입고 수량",
